# ACRoD

./: .coverage  .gitignore  .readthedocs.yaml  4R4P.md  CITATION.cff  Mathematics behind Jacobian formulation.md  Notation_and_Nomenclature.md  README.md  RRR.md  RSSRSSR.md  Robot_Topology_Matrix.md  __init__.py  code.ipynb  jacobian_spatial.py  paper.md  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: paper.yml  python-app_new_version.yml
Tests/: __init__.py  test_jacobian.py
docs/: 3R_code.rst  4R4P.rst  4R4P_code.rst  RSSRSSR.rst  RSSRSSR_code.rst  acrod.rst  community_guidelines.rst  conf.py  examples.rst  index.rst  installation_and_usage.rst  mathematics_behind_jacobian_formulation.rst  modules.rst  notation_and_nomenclature.rst  requirements.txt  robot_topology_matrix.rst  urdf_to_robot-topology_matrix.rst  urdf_to_robot_topology_matrix.rst
docs/source/: conf.py  index.rst
examples/Jacobian/: 3R_serial_robot.md  4R4P_code.md  4R4P_parallel_robot.md  RSSR-SSR_serial-parallel_hybrid_robot copy.md
misc/: Mathematics_behind_Jacobian_formulation.md  Notation_and_Nomenclature.md  Robot_Topology_Matrix.md
new_version/: README.md  functions.py
older_version/: README.rst
older_version/src/: jacobian_planar.py
older_version/tests/: jacobian_testing (older_version).py
paper/: paper.bib  paper.md
src/: dynamics.py  jacobian_spatial.py
src/acrod/: functions.py  jacobian.py  serial_manipulator.py  (+2 more)
src/acrod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_jacobian.py  test_urdf.py  validate_matrix.py
(+67 files in other folders)
