[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acrod"
version = "1.1.6"
authors = [
  { name="Suneesh Jacob Akkarapakam", email="suneeshjacob@gmail.com" },
  { name="Rituparna Datta", email="rituparndatta@gmail.com" }
]
description = "Automatic Computation for Robot Design (ACRoD)"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["jacobian", "robotics", "kinematics"]
dependencies = ["numpy", "sympy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/suneeshjacob/ACRoD"
"Bug Tracker" = "https://github.com/suneeshjacob/ACRoD/issues"
"Source" = "https://github.com/suneeshjacob/ACRoD/tree/main/src"